<resources>
    <string name="app_name">CineMorelia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="iv_content_description">Dummy description</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="error">Error</string>
    <string name="msg_empty_field_login">Por favor ingresa tus credenciales para iniciar sesión</string>
    <string name="msg_invalid_email">Por favor verifica la validez de tu correo electrónico</string>
    <string name="error_title">Error inesperado</string>
    <string name="exception_title_login">Excepcion en petición</string>
    <string name="exception_body_login">Excepcion en petición: %1s</string>
    <string name="title_movies">Cartelera</string>
    <string name="title_profile">Perfil</string>
    <string name="cinema_name">Cine Morelia</string>
    <string name="full_name">%1s %2s</string>
    <string name="tit_club_number">Tarjeta club:</string>
    <string name="unexpected_error">Error inesperado</string>
</resources>